extract clauses for component

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,12 @@
 add_subdirectory (component_types)
 
 SET(SOURCES alt_component_analyzer.cpp 
-	component_analyzer.cpp
 	component_cache.cpp
 	component_management.cpp
 	instance.cpp
-	new_component_analyzer.cpp
 	solver.cpp
-	statistics.cpp)
+	statistics.cpp
+        gpusolver.cpp)
 
 
 ADD_LIBRARY(libsharpSAT ${SOURCES} component_types)
