work in progress: solve subcomponents on the GPU with GPUSAT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,6 @@ add_subdirectory(src)
 
 add_executable (sharpSAT src/main.cpp)
 target_link_libraries(sharpSAT libsharpSAT ${GMP_LIB} ${GMPXX_LIB}) 
+
+# FIXME: Encapsulate CUDA in gpusat
+target_include_directories(sharpSAT PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
